# vllm-eval-public

./: .bandit  .env  .gitignore  404.html  BENCHMARK_GUIDE.md  CI_CD_GUIDE.md  CLI_README.md  ISSUE_TEMPLATE.md  LICENSE  Makefile  QUICK_START_GUIDE.md  README-OrbStack-Test.md  README.md  UPDATED_CLI_GUIDE.md  env.example  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-test.txt  sitemap.xml  test-all.sh
.cursor/rules/: context.mdc  design.mdc  requirements.mdc  roadmap.mdc
.deepeval/: .deepeval_telemetry.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  evalchemy-build.yml  evalchemy-deploy.yml  evalchemy-image-build.yml  image-build.yml  lint-test.yml  nvidia-eval-build.yml  nvidia-eval-deploy.yml  standard-evalchemy-build.yml  standard-evalchemy-deploy.yml  standard-evalchemy-image-build.yml  vllm-benchmark-build.yml  vllm-benchmark-deploy.yml  vllm-benchmark-image-build.yml
CONTRIBUTING/: index.html
api/deepeval-api/: index.html
api/docker-api/: index.html
api/evalchemy-api/: index.html
api/nvidia-eval-api/: index.html
api/vllm-benchmark-api/: index.html
architecture/component-diagram/: index.html
architecture/data-flow/: index.html
architecture/deployment-guide/: index.html
architecture/security-model/: index.html
architecture/system-overview/: index.html
charts/argo-workflows/: Chart.yaml  values.yaml
charts/clickhouse/: Chart.yaml  values.yaml
charts/grafana/: Chart.yaml  values.yaml
cli/commands/: index.html
cli/configuration/: index.html
cli/overview/: index.html
cli/troubleshooting/: index.html
configs/: README.md  deepeval.yaml  eval_config.json  pytest.ini  standard_evalchemy.json  vllm_benchmark.json  vllm_benchmark.yaml
datasets/: README.md
datasets/raw/custom_benchmark/: test.jsonl  train.jsonl
developer/ci-cd-pipeline/: index.html
developer/coding-standards/: index.html
developer/development-setup/: index.html
developer/quick-start/: index.html
developer/testing-guide/: index.html
docker/: README.md  STANDARDIZATION_GUIDE.md  deepeval.Dockerfile  evalchemy-cpu.Dockerfile  evalchemy.Dockerfile  evalchemy.standardized.Dockerfile  evalchemy_api_wrapper.py  evalchemy_healthcheck.sh  legacy-evalchemy.Dockerfile  nvidia-eval.Dockerfile  nvidia-eval.standardized.Dockerfile  nvidia_eval.Dockerfile  standard-evalchemy.Dockerfile  standard-evalchemy.standardized.Dockerfile  standard_evalchemy.Dockerfile  vllm-benchmark-linux.Dockerfile  vllm-benchmark-linux.standardized.Dockerfile  vllm-benchmark.Dockerfile  vllm-benchmark.standardized.Dockerfile  workflow-tools.Dockerfile
docs/: CONTRIBUTING.md  how-to-CICD.md  how-to-add-benchmark.md  index.md  local-testing-guide.md  local-vllm-evaluation-guide.md  model-benchmark-frontend.md  standard-evalchemy-guide.md  vllm-eval-prd.md
docs/api/: deepeval-api.md  evalchemy-api.md  nvidia-eval-api.md  vllm-benchmark-api.md
docs/architecture/: system-overview.md
docs/cli/: commands.md  configuration.md  overview.md  troubleshooting.md
docs/developer/: development-setup.md  testing-guide.md
docs/operations/: troubleshooting.md
docs/user/: benchmark-configuration.md  getting-started.md
eval/deepeval_tests/: __init__.py  test_custom_metric.py  test_llm_rag.py
eval/deepeval_tests/metrics/: __init__.py  rag_precision.py
eval/evalchemy/: run_evalchemy.sh
eval/evalchemy/tasks/: __init__.py  custom_task_1.yaml  custom_task_2.yaml
eval/nvidia_eval/: README-en.md  README.md  download_livecodebench.py  evaluate_aime.py  evaluate_livecodebench.py  generate_aime.sh  generate_livecodebench.sh  inference.py  run_aime.sh  run_livecodebench.sh
eval/nvidia_eval/data/: aime24.jsonl  aime25.jsonl  livecodebench_split.json
eval/nvidia_eval/tools/: code_verifier.py  convert_ckpt_to_safetensors.py
eval/standard_evalchemy/: README_STANDARD.md  run_evalchemy.sh
eval/standard_evalchemy/configs/: eval_config.json
eval/vllm-benchmark/: run_vllm_benchmark.sh  run_vllm_performance_benchmark.sh
how-to-CICD/: index.html
how-to-add-benchmark/: index.html
k8s/: evalchemy-job.yaml  nvidia-eval-job.yaml  standard-evalchemy-job.yaml  vllm-benchmark-job.yaml
local-testing-guide/: index.html
local-vllm-evaluation-guide/: index.html
operations/backup-recovery/: index.html
operations/monitoring-guide/: index.html
operations/performance-tuning/: index.html
operations/scaling-guide/: index.html
operations/troubleshooting/: index.html
scripts/: aggregate_metrics.py  analyze_performance_results.py  analyze_vllm_results.py  dedup_datasets.py  run_complete_local_evalchemy.py  run_complete_local_evaluation.sh  run_local_deepeval.py  run_local_deepeval_mock.py  run_local_evalchemy.py  run_simple_deepeval_test.py  run_simple_evalchemy_test.py  run_vllm_benchmark.sh  run_vllm_deepeval_test.py  standardize_aime_results.py  standardize_evalchemy.py  standardize_livecodebench_results.py  standardize_vllm_benchmark.py  test-all-orbstack.sh  validate_schemas.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/CONTRIBUTING/: index.html
site/api/deepeval-api/: index.html
site/api/evalchemy-api/: index.html
site/api/nvidia-eval-api/: index.html
site/api/vllm-benchmark-api/: index.html
site/architecture/data-flow/: index.html
site/how-to-CICD/: index.html
site/how-to-add-benchmark/: index.html
site/local-testing-guide/: index.html
site/local-vllm-evaluation-guide/: index.html
site/vllm-eval-prd/: index.html
standard-evalchemy-guide/: index.html
user/benchmark-configuration/: index.html
user/custom-metrics/: index.html
user/getting-started/: index.html
user/result-interpretation/: index.html
vllm-eval-prd/: index.html
vllm_eval_cli/: __init__.py  main.py
vllm_eval_cli/adapters/: __init__.py  base.py  deepeval.py  evalchemy.py  nvidia.py  vllm_benchmark.py
vllm_eval_cli/commands/: __init__.py  batch.py  config.py  results.py  run.py  setup.py  system.py
vllm_eval_cli/core/: config.py
vllm_eval_cli/ui/: console.py
vllm_eval_cli/utils/: __init__.py
(+7 files in other folders)
